# study-Behavioral-DataAnalysis

./: README.md  pyproject.toml
chapter1/: code.ipynb
