[tool.poetry]
name = "study-behavioral-dataanalysis"
version = "0.1.0"
description = ""
authors = ["karpathy9 <83355157+karpathy9@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
numpy = "^1.26.2"
statsmodels = "^0.14.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
